# fpl-agent

./: .gitignore  main.py  pyproject.toml  try_rag.py
agents/data_agent/: __init__.py  agent.py  client.py  models.py
agents/rag_agent/: __init__.py  agent.py  embedder.py  models.py  store.py
tests/: test_data_agent.py  test_rag_agent.py
