[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpl-agent"
version = "0.1.0"
description = "Multi-agent Fantasy Premier League assistant"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",         # httpx mock library
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
